Fix CORS and security config for login endpoint